:memo: Fixs + add model id check